Ensure logo button is vertically aligned with other main toolbar buttons

--- a/toolbar/style.less
+++ b/toolbar/style.less
@@ -46,7 +46,7 @@
   #logoImage {
     width: auto;
     border: 0;
-    vertical-align: top;
+    vertical-align: middle;
     height: 34px;
   }
 
